@@ -122,7 +122,9 @@ class SignupView(RedirectAuthenticatedUserMixin, CloseableSignupMixin, FormView)
 
     def form_valid(self, form):
         user = form.save(self.request)
-        return complete_signup(self.request, user, self.get_success_url())
+        return complete_signup(self.request, user, 
+                               app_settings.EMAIL_VERIFICATION,
+                               self.get_success_url())
 
     def get_context_data(self, **kwargs):
         ret = super(SignupView, self).get_context_data(**kwargs)
