@@ -47,6 +47,23 @@ class AppSettings(object):
         return self._setting("PROVIDERS", {})
 
     @property
+    def EMAIL_REQUIRED(self):
+        """
+        The user is required to hand over an e-mail address when signing up
+        """
+        from allauth.account import app_settings as account_settings
+        return self._setting("EMAIL_REQUIRED", account_settings.EMAIL_REQUIRED)
+
+    @property
+    def EMAIL_VERIFICATION(self):
+        """
+        See e-mail verification method
+        """
+        from allauth.account import app_settings as account_settings
+        return self._setting("EMAIL_VERIFICATION", 
+                             account_settings.EMAIL_VERIFICATION)
+
+    @property
     def ADAPTER(self):
         return self._setting \
             ('ADAPTER', 
